--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "democlean"
-version = "0.1.5"
+version = "0.2.0"
 description = "Score robot demonstrations by motion quality"
 readme = "README.md"
 license = "MIT"
@@ -29,6 +29,8 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0", "pytest-cov", "ruff"]
+hpt = ["torch>=2.0"]
+all = ["democlean[dev,hpt]"]
 
 [project.scripts]
 democlean = "democlean.cli:main"
